package mro.fantasy.game.devices.events;

/**
 * Event that is fired by a {@link GameEventProducer} after the conversion of one or more {@link DeviceDataPackage}s which were received through the {@link DeviceEventService}.
 */
public interface GameEvent {
}
